もととなった Apache Commons Lang3 のバージョンをJavadoc部分に記載。

--- a/force-app/main/default/classes/CharUtils.cls
+++ b/force-app/main/default/classes/CharUtils.cls
@@ -24,7 +24,9 @@
  *
  * <p>#ThreadSafe#</p>
  * @since 2.1
- * @author Apex migration by Toshiki Iga.
+ * @author [Apex] Toshiki Iga.
+ * @version [Apex] v0.8.20221226a
+ * @version [Java original] commons-lang3-3.12.0
  */
 global class CharUtils {
 
